--- a/package.json
+++ b/package.json
@@ -24,6 +24,5 @@
   "bugs": {
     "url": "https://github.com/2022-SMHRD-KDT-AI-3/CodingNatorAddress/issues"
   },
-  "homepage": "https://github.com/2022-SMHRD-KDT-AI-3/CodingNatorAddress#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/2022-SMHRD-KDT-AI-3/CodingNatorAddress#readme"
 }
