--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.8"
   },
   "repository": {
